--- a/package.json
+++ b/package.json
@@ -1,19 +1,11 @@
 {
-  "name": "serverless-dynalite",
-  "version": "1.4.0",
+  "name": "@nearst/serverless-dynalite",
+  "version": "2.0.0",
   "description": "Serverless plugin to run Dynalite locally to handle DynamoDB development. Can watch for table config changes.",
-  "main": "distribution/index.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "babel index.js --out-dir distribution"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "babel": {
-    "presets": [
-      "es2015",
-      "stage-2"
-    ]
-  },
-  "prepublishOnly": "npm run build",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/sdd/serverless-dynalite.git"
@@ -27,19 +19,13 @@
   "author": "Scott Donnelly",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/sdd/serverless-dynalite/issues"
+    "url": "https://github.com/Ankcorn/serverless-dynalite/issues"
   },
-  "homepage": "https://github.com/sdd/serverless-dynalite#readme",
+  "homepage": "https://github.com/Ankcorn/serverless-dynalite#readme",
+  "peerDependencies": {
+    "aws-sdk": "^2.610.0"
+  },
   "dependencies": {
-    "aws-sdk": "^2.41.0",
-    "babel-polyfill": "^6.26.0",
-    "dynalite": "^1.2.0",
-    "graceful-chokidar": "^0.1.0",
-    "lodash": "^4.17.4"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1"
+    "dynalite": "^3.2.1"
   }
 }
